--- a/templates/temp.html
+++ b/templates/temp.html
@@ -5,7 +5,6 @@
     <title></title>
   </head>
   <body>
-    <h1>this is a heading</h1>
-    <p>this a paragraph</p>
+    <h1>this is a head</h1>
   </body>
 </html>
